[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja; sys_platform == 'windows'",
    "numpy"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
archs = ["native"]
build = "cp*-macosx_*"
before-all = [
    "pushd pymnn/pip_package",
    "python3 build_deps.py",
    "popd"
]
repair-wheel-command = ""

[tool.cibuildwheel.linux]
build = "cp*-manylinux*"
skip = "pp*"
before-all = [
    "pushd pymnn/pip_package",
    "python3 build_deps.py",
    "popd"
]
archs = ["native"]
repair-wheel-command = [
    "export LD_LIBRARY_PATH=$(pwd)/pymnn_build/tools/converter/libtorch/lib:$LD_LIBRARY_PATH",
    "echo $LD_LIBRARY_PATH",
    "auditwheel repair -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.windows]
before-all = [
    "cd pymnn/pip_package",
    "python3 build_deps.py",
    "cd ../.."
]